# fix-that-prompt

./: .gitignore  Dockerfile  README.md  chainlit.md  main.py  pyproject.toml  requirements.txt
cdk/: SHUTDOWN.md  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
dashboard/: README.md  app.py  launch_borderless.sh
dashboard/templates/: dashboard.html
data/: bad_prompts.json  leaderboard.json
scripts/: diagnose_dynamodb.py  migrate_to_dynamodb.py
src/: __init__.py  main.py
src/auth/: __init__.py  oidc_client.py
src/components/: __init__.py  game.py  session_manager.py
src/database/: dynamodb_leaderboard.py  leaderboard_db.py
src/evaluators/: __init__.py  ragas_wrapper.py
src/models/: player_session.py
src/prompts/: __init__.py  loader.py
src/utils/: logger.py
